<resources>
    <string name="app_name">ArDiary</string>
    <string name="app_sub_name">나만의 AR 다이어리</string>

    <!--공통-->
    <string name="img_app_logo">logo image</string>
    <string name="ic_back">back icon</string>

    <!--메뉴-->
    <string name="frag_ar">camera</string>
    <string name="frag_map">map</string>
    <string name="frag_notification">notification</string>
    <string name="frag_temp">temp</string>

    <!--에러처리-->
    <string name="default_fail">네트워크연결이 원활하지 않습니다</string>

    <!-- 로그인 -->
    <string name="login">로그인</string>
    <string name="login_id_hint">아이디(이메일)</string>
    <string name="login_email_hint">직접입력</string>
    <string name="login_email_delimiter">\@</string>
    <string name="login_name_hint">이름</string>
    <string name="login_signup">회원가입</string>

    <!-- 프로필 -->
    <string name="profile_title">마이프로필</string>
    <string name="profile_friend_list">친구리스트</string>
    <string name="profile_like_list">좋아요 리스트</string>
    <string name="profile_notify_setting">알림 설정</string>
    <string name="profile_customer_service">고객센터</string>
    <string name="profile_logout">로그아웃</string>
    <string name="profile_withdrawal">회원탈퇴</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_text">네트워크에 문제가 발생했습니다!</string>
    <string name="error_refresh">다시 불러오기</string>
</resources>