<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.MyProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/screen_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/profile_title"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/screen_title_tv">

            <ImageView
                android:id="@+id/profile_image_iv"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nickname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="name"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_title"
            android:textStyle="italic"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/edit_profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="1dp"
            android:layout_marginRight="12dp"
            app:layout_constraintTop_toBottomOf="@id/nickname_tv"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:text="프로필편집"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/profile_padding_top"
            android:paddingBottom="@dimen/profile_padding_bottom"
            android:background="@drawable/bottom_line"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/profile_margin_left"
                android:text="list"
                android:textColor="@color/black"
                android:textSize="@dimen/profile_item"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/friend_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line"
            android:gravity="center|left"
            android:orientation="horizontal"
            android:paddingTop="@dimen/profile_padding_top"
            android:paddingBottom="@dimen/profile_padding_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="@dimen/profile_icon"
                android:layout_height="@dimen/profile_icon"
                android:layout_marginLeft="@dimen/profile_margin_left"
                android:layout_marginRight="@dimen/profile_margin_right"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_friend_list"
                android:textColor="@color/black"
                android:textSize="@dimen/profile_item" />

            <ImageView
                android:layout_width="@dimen/profile_icon"
                android:layout_height="@dimen/profile_icon"
                android:layout_marginRight="@dimen/profile_margin_right"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/like_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line"
            android:gravity="center|left"
            android:orientation="horizontal"
            android:paddingTop="@dimen/profile_padding_top"
            android:paddingBottom="@dimen/profile_padding_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friend_list">

            <ImageView
                android:layout_width="@dimen/profile_icon"
                android:layout_height="@dimen/profile_icon"
                android:layout_marginLeft="@dimen/profile_margin_left"
                android:layout_marginRight="@dimen/profile_margin_right"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_like_list"
                android:textColor="@color/black"
                android:textSize="@dimen/profile_item" />

            <ImageView
                android:layout_width="@dimen/profile_icon"
                android:layout_height="@dimen/profile_icon"
                android:layout_marginRight="@dimen/profile_margin_right"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/blank_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/bottom_line"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/like_list"/>
        <LinearLayout
            android:id="@+id/notify_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line"
            android:gravity="center|left"
            android:orientation="horizontal"
            android:paddingTop="@dimen/profile_padding_top"
            android:paddingBottom="@dimen/profile_padding_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blank_layout">

            <ImageView
                android:layout_width="@dimen/profile_icon"
                android:layout_height="@dimen/profile_icon"
                android:layout_marginLeft="@dimen/profile_margin_left"
                android:layout_marginRight="@dimen/profile_margin_right"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_notify_setting"
                android:textColor="@color/black"
                android:textSize="@dimen/profile_item" />

            <ImageView
                android:layout_width="@dimen/profile_icon"
                android:layout_height="@dimen/profile_icon"
                android:layout_marginRight="@dimen/profile_margin_right"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/customer_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line"
            android:gravity="center|left"
            android:orientation="horizontal"
            android:paddingTop="@dimen/profile_padding_top"
            android:paddingBottom="@dimen/profile_padding_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notify_setting">

            <ImageView
                android:layout_width="@dimen/profile_icon"
                android:layout_height="@dimen/profile_icon"
                android:layout_marginLeft="@dimen/profile_margin_left"
                android:layout_marginRight="@dimen/profile_margin_right"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_customer_service"
                android:textColor="@color/black"
                android:textSize="@dimen/profile_item" />

            <ImageView
                android:layout_width="@dimen/profile_icon"
                android:layout_height="@dimen/profile_icon"
                android:layout_marginRight="@dimen/profile_margin_right"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line"
            android:gravity="center|left"
            android:orientation="horizontal"
            android:paddingTop="@dimen/profile_padding_top"
            android:paddingBottom="@dimen/profile_padding_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customer_service">

            <ImageView
                android:layout_width="@dimen/profile_icon"
                android:layout_height="@dimen/profile_icon"
                android:layout_marginLeft="@dimen/profile_margin_left"
                android:layout_marginRight="@dimen/profile_margin_right"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_logout"
                android:textColor="@color/black"
                android:textSize="@dimen/profile_item" />

            <ImageView
                android:layout_width="@dimen/profile_icon"
                android:layout_height="@dimen/profile_icon"
                android:layout_marginRight="@dimen/profile_margin_right"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/withdrawal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line"
            android:gravity="center|left"
            android:orientation="horizontal"
            android:paddingTop="@dimen/profile_padding_top"
            android:paddingBottom="@dimen/profile_padding_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logout">

            <ImageView
                android:layout_width="@dimen/profile_icon"
                android:layout_height="@dimen/profile_icon"
                android:layout_marginLeft="@dimen/profile_margin_left"
                android:layout_marginRight="@dimen/profile_margin_right"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_withdrawal"
                android:textColor="@color/black"
                android:textSize="@dimen/profile_item" />

            <ImageView
                android:layout_width="@dimen/profile_icon"
                android:layout_height="@dimen/profile_icon"
                android:layout_marginRight="@dimen/profile_margin_right"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>